[package]
name = "mumble-rs"
version = "0.1.0"
authors = ["Henrik Böving <hargonix@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
mumble-protocol = "0.3"
async-trait = "0.1"
tokio = { version = "0.2", features = ["full"] }
native-tls = "0.2"
futures = "0.3"
tokio-tls = "0.3"
tokio-util = "0.3"
os_info = { version = "2.0.0", default-features = false }

[dev-dependencies]
pretty_env_logger = "0.4"
rand = "0.7"
